bk_ida/gccida/g0/decompose
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/decompose/src/reload.c:2683:25: error: conflicting types for 'decompose'
 struct decomposition * decompose(  struct decomposition *retstr, rtx x) 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/decompose/src/reload.c:254:29: note: previous declaration is here
static struct decomposition decompose PARAMS ((rtx));
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/decompose/src/reload.c:2704:4: error: expected ';' after expression
rtx addr; // [rsp+30h] [rbp-20h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/decompose/src/reload.c:2704:5: error: use of undeclared identifier 'addr'
rtx addr; // [rsp+30h] [rbp-20h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/decompose/src/reload.c:2705:4: error: expected ';' after expression
rtx offset; // [rsp+38h] [rbp-18h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/decompose/src/reload.c:2705:5: error: use of undeclared identifier 'offset'
rtx offset; // [rsp+38h] [rbp-18h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/decompose/src/reload.c:2706:4: error: expected ';' after expression
rtx base; // [rsp+40h] [rbp-10h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/decompose/src/reload.c:2706:5: error: use of undeclared identifier 'base'
rtx base; // [rsp+40h] [rbp-10h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/decompose/src/reload.c:2754:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[*( ( unsigned __int8 *)x + 2)] == MODE_COMPLEX_INT 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/decompose/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/decompose/src/reload.c:2755:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)x + 2)] == MODE_COMPLEX_FLOAT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/decompose/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/decompose/src/reload.c:2775:20: error: too many arguments to function call, expected 1, have 2
decompose( retstr, x->fld[0].rtx); 
~~~~~~~~~          ^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/decompose/src/reload.c:254:1: note: 'decompose' declared here
static struct decomposition decompose PARAMS ((rtx));
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/decompose/src/reload.c:2811:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[*( ( unsigned __int8 *)x + 2)] == MODE_COMPLEX_INT 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/decompose/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/decompose/src/reload.c:2812:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)x + 2)] == MODE_COMPLEX_FLOAT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/decompose/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/decompose/src/reload.c:2844:1: error: use of undeclared identifier 'base'
base = 0LL; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/decompose/src/reload.c:2845:1: error: use of undeclared identifier 'offset'
offset = 0LL; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/decompose/src/reload.c:2846:1: error: use of undeclared identifier 'addr'
addr = x->fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/decompose/src/reload.c:2847:17: error: use of undeclared identifier 'addr'
if ( *( _WORD *)addr == 96 || *( _WORD *)addr == 97 || *( _WORD *)addr == 98 || *( _WORD *)addr == 99 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/decompose/src/reload.c:2847:42: error: use of undeclared identifier 'addr'
if ( *( _WORD *)addr == 96 || *( _WORD *)addr == 97 || *( _WORD *)addr == 98 || *( _WORD *)addr == 99 ) 
                                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/decompose/src/reload.c:2847:67: error: use of undeclared identifier 'addr'
if ( *( _WORD *)addr == 96 || *( _WORD *)addr == 97 || *( _WORD *)addr == 98 || *( _WORD *)addr == 99 ) 
                                                                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/decompose/src/reload.c:2847:92: error: use of undeclared identifier 'addr'
if ( *( _WORD *)addr == 96 || *( _WORD *)addr == 97 || *( _WORD *)addr == 98 || *( _WORD *)addr == 99 ) 
                                                                                           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/decompose/src/obj/reload.o] Error 1
